AKS_Networking/bst-api.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bst-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bst-api
  template:
    metadata:
      labels:
        app: bst-api
    spec:
      containers:
      - name: bst-backend
        image: acr3159.azurecr.io/bst-bank-service:cm2
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
