AKS_Networking/bst-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bst-api-service
spec:
  selector:
    app: bst-api
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
