AKS_Networking/bst-portal.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bst-portal-service
spec:
  selector:
    app: bst-portal
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
