AKS_Networking/bst-portal.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bst-portal-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend: # route with /bst-portal
          serviceName: bst-portal-service
          servicePort: 80
        path: /bst-portal(/|$)(.*)
      - backend: # default route with base url
          serviceName: bst-portal-service
          servicePort: 80
        path: /(.*)
